frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-app
spec:
  type: LoadBalancer
  selector:
    app: frontend-app
  ports:
    - port: 8501

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
        - name: frontend-app
          image: deepblue597/frontend-tutorial:0.0.1
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 8501
